@@ -1,3 +1,8 @@
+2007-03-19  Jeffrey Stedfast <fejj@gnome.org>
+
+	* DemoLib/FloatingCageScene.cs: Updated to use Vertex and Vector
+	classes
+
 2007-03-18  Jeffrey Stedfast <fejj@gnome.org>
 
 	* DemoLib/Vector.cs: Added more special vectors
